--- a/Quadcopter_UniTS/Quadcopter_UniTS.ioc
+++ b/Quadcopter_UniTS/Quadcopter_UniTS.ioc
@@ -22,24 +22,27 @@ Mcu.Name=STM32H7A3Z(G-I)TxQ
 Mcu.Package=LQFP144
 Mcu.Pin0=PE5
 Mcu.Pin1=PC13
-Mcu.Pin10=PB14
-Mcu.Pin11=PD8
-Mcu.Pin12=PD9
-Mcu.Pin13=PG7
-Mcu.Pin14=PA9
-Mcu.Pin15=PA10
-Mcu.Pin16=PA11
-Mcu.Pin17=PA12
-Mcu.Pin18=PB4
-Mcu.Pin19=PB6
+Mcu.Pin10=PE11
+Mcu.Pin11=PE13
+Mcu.Pin12=PE14
+Mcu.Pin13=PB14
+Mcu.Pin14=PD8
+Mcu.Pin15=PD9
+Mcu.Pin16=PG7
+Mcu.Pin17=PA9
+Mcu.Pin18=PA10
+Mcu.Pin19=PA11
 Mcu.Pin2=PC14-OSC32_IN
-Mcu.Pin20=PE1
-Mcu.Pin21=VP_SYS_VS_Systick
-Mcu.Pin22=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin23=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin24=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin25=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin26=VP_TIM15_VS_ClockSourceINT
+Mcu.Pin20=PA12
+Mcu.Pin21=PB4
+Mcu.Pin22=PB6
+Mcu.Pin23=PE1
+Mcu.Pin24=VP_SYS_VS_Systick
+Mcu.Pin25=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin26=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin27=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin28=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin29=VP_TIM15_VS_ClockSourceINT
 Mcu.Pin3=PC15-OSC32_OUT
 Mcu.Pin4=PF10
 Mcu.Pin5=PH0-OSC_IN
@@ -47,7 +50,7 @@ Mcu.Pin6=PH1-OSC_OUT
 Mcu.Pin7=PA0
 Mcu.Pin8=PB0
 Mcu.Pin9=PE9
-Mcu.PinsNb=27
+Mcu.PinsNb=30
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H7A3ZITxQ
@@ -130,6 +133,12 @@ PE1.GPIOParameters=GPIO_Label
 PE1.GPIO_Label=LD2 (Yellow Led)
 PE1.Locked=true
 PE1.Signal=GPIO_Output
+PE11.Locked=true
+PE11.Signal=S_TIM1_CH2
+PE13.Locked=true
+PE13.Signal=S_TIM1_CH3
+PE14.Locked=true
+PE14.Signal=S_TIM1_CH4
 PE5.Signal=S_TIM15_CH1
 PE9.Locked=true
 PE9.Signal=S_TIM1_CH1
@@ -172,8 +181,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=Lab.ioc
-ProjectManager.ProjectName=Lab
+ProjectManager.ProjectFileName=Quadcopter_UniTS.ioc
+ProjectManager.ProjectName=Quadcopter_UniTS
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
@@ -182,7 +191,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_USB_OTG_HS_USB_Init-USB_OTG_HS-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_USB_OTG_HS_USB_Init-USB_OTG_HS-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_TIM5_Init-TIM5-false-HAL-true,9-MX_TIM15_Init-TIM15-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=16125000
 RCC.AHB12Freq_Value=150000000
 RCC.AHB4Freq_Value=150000000
@@ -273,6 +282,12 @@ SH.S_TIM15_CH1.0=TIM15_CH1,PWM_Input_1
 SH.S_TIM15_CH1.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM1_CH2.0=TIM1_CH2
+SH.S_TIM1_CH2.ConfNb=1
+SH.S_TIM1_CH3.0=TIM1_CH3
+SH.S_TIM1_CH3.ConfNb=1
+SH.S_TIM1_CH4.0=TIM1_CH4
+SH.S_TIM1_CH4.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM_Input_1
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM4_CH1.0=TIM4_CH1,PWM_Input_1
