--- a/Quadcopter_UniTS/Quadcopter_UniTS.ioc
+++ b/Quadcopter_UniTS/Quadcopter_UniTS.ioc
@@ -3,21 +3,25 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 File.Version=6
+I2C1.I2C_Speed_Mode=I2C_Fast
+I2C1.IPParameters=Timing,I2C_Speed_Mode
+I2C1.Timing=0x00702787
 KeepUserPlacement=false
 Mcu.CPN=STM32H7A3ZIT6Q
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M7
-Mcu.IP1=NVIC
-Mcu.IP10=USB_OTG_HS
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=TIM1
-Mcu.IP5=TIM3
-Mcu.IP6=TIM4
-Mcu.IP7=TIM5
-Mcu.IP8=TIM15
-Mcu.IP9=USART3
-Mcu.IPNb=11
+Mcu.IP1=I2C1
+Mcu.IP10=USART3
+Mcu.IP11=USB_OTG_HS
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=TIM1
+Mcu.IP6=TIM3
+Mcu.IP7=TIM4
+Mcu.IP8=TIM5
+Mcu.IP9=TIM15
+Mcu.IPNb=12
 Mcu.Name=STM32H7A3Z(G-I)TxQ
 Mcu.Package=LQFP144
 Mcu.Pin0=PE5
@@ -36,21 +40,23 @@ Mcu.Pin2=PC14-OSC32_IN
 Mcu.Pin20=PA12
 Mcu.Pin21=PB4
 Mcu.Pin22=PB6
-Mcu.Pin23=PE1
-Mcu.Pin24=VP_SYS_VS_Systick
-Mcu.Pin25=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin26=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin27=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin28=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin29=VP_TIM15_VS_ClockSourceINT
+Mcu.Pin23=PB7
+Mcu.Pin24=PB8
+Mcu.Pin25=PE1
+Mcu.Pin26=VP_SYS_VS_Systick
+Mcu.Pin27=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin28=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin29=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin3=PC15-OSC32_OUT
+Mcu.Pin30=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin31=VP_TIM15_VS_ClockSourceINT
 Mcu.Pin4=PF10
 Mcu.Pin5=PH0-OSC_IN
 Mcu.Pin6=PH1-OSC_OUT
 Mcu.Pin7=PA0
 Mcu.Pin8=PB0
 Mcu.Pin9=PE9
-Mcu.PinsNb=30
+Mcu.PinsNb=32
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H7A3ZITxQ
@@ -105,6 +111,10 @@ PB4.Locked=true
 PB4.Signal=S_TIM3_CH1
 PB6.Locked=true
 PB6.Signal=S_TIM4_CH1
+PB7.Mode=I2C
+PB7.Signal=I2C1_SDA
+PB8.Mode=I2C
+PB8.Signal=I2C1_SCL
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=B1 (Blue PushButton)
 PC13.Locked=true
