First PID loop control added. Uncalibrated

--- a/Quadcopter_UniTS/Quadcopter_UniTS.ioc
+++ b/Quadcopter_UniTS/Quadcopter_UniTS.ioc
@@ -3,14 +3,14 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 File.Version=6
-I2C1.I2C_Speed_Mode=I2C_Fast
-I2C1.IPParameters=Timing,I2C_Speed_Mode
-I2C1.Timing=0x00702787
+I2C4.I2C_Speed_Mode=I2C_Fast
+I2C4.IPParameters=Timing,I2C_Speed_Mode
+I2C4.Timing=0x00702787
 KeepUserPlacement=false
 Mcu.CPN=STM32H7A3ZIT6Q
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M7
-Mcu.IP1=I2C1
+Mcu.IP1=I2C4
 Mcu.IP10=USART3
 Mcu.IP11=USB_OTG_HS
 Mcu.IP2=NVIC
@@ -26,22 +26,22 @@ Mcu.Name=STM32H7A3Z(G-I)TxQ
 Mcu.Package=LQFP144
 Mcu.Pin0=PE5
 Mcu.Pin1=PC13
-Mcu.Pin10=PE11
-Mcu.Pin11=PE13
-Mcu.Pin12=PE14
-Mcu.Pin13=PB14
-Mcu.Pin14=PD8
-Mcu.Pin15=PD9
-Mcu.Pin16=PG7
-Mcu.Pin17=PA9
-Mcu.Pin18=PA10
-Mcu.Pin19=PA11
+Mcu.Pin10=PF15
+Mcu.Pin11=PE9
+Mcu.Pin12=PE11
+Mcu.Pin13=PE13
+Mcu.Pin14=PE14
+Mcu.Pin15=PB14
+Mcu.Pin16=PD8
+Mcu.Pin17=PD9
+Mcu.Pin18=PG7
+Mcu.Pin19=PA9
 Mcu.Pin2=PC14-OSC32_IN
-Mcu.Pin20=PA12
-Mcu.Pin21=PB4
-Mcu.Pin22=PB6
-Mcu.Pin23=PB7
-Mcu.Pin24=PB8
+Mcu.Pin20=PA10
+Mcu.Pin21=PA11
+Mcu.Pin22=PA12
+Mcu.Pin23=PB4
+Mcu.Pin24=PB6
 Mcu.Pin25=PE1
 Mcu.Pin26=VP_SYS_VS_Systick
 Mcu.Pin27=VP_TIM1_VS_ClockSourceINT
@@ -55,7 +55,7 @@ Mcu.Pin5=PH0-OSC_IN
 Mcu.Pin6=PH1-OSC_OUT
 Mcu.Pin7=PA0
 Mcu.Pin8=PB0
-Mcu.Pin9=PE9
+Mcu.Pin9=PF14
 Mcu.PinsNb=32
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -111,10 +111,6 @@ PB4.Locked=true
 PB4.Signal=S_TIM3_CH1
 PB6.Locked=true
 PB6.Signal=S_TIM4_CH1
-PB7.Mode=I2C
-PB7.Signal=I2C1_SDA
-PB8.Mode=I2C
-PB8.Signal=I2C1_SCL
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=B1 (Blue PushButton)
 PC13.Locked=true
@@ -156,6 +152,10 @@ PF10.GPIOParameters=GPIO_Label
 PF10.GPIO_Label=USB_FS_PWR_EN [STMPS2141STR_EN]
 PF10.Locked=true
 PF10.Signal=GPIO_Output
+PF14.Mode=I2C
+PF14.Signal=I2C4_SCL
+PF15.Mode=I2C
+PF15.Signal=I2C4_SDA
 PG7.GPIOParameters=GPIO_Label
 PG7.GPIO_Label=USB_FS_OVCR  [STMPS2141STR_FAULT]
 PG7.Locked=true
@@ -201,7 +201,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_USB_OTG_HS_USB_Init-USB_OTG_HS-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_TIM5_Init-TIM5-false-HAL-true,9-MX_TIM15_Init-TIM15-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_USB_OTG_HS_USB_Init-USB_OTG_HS-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_TIM5_Init-TIM5-false-HAL-true,9-MX_TIM15_Init-TIM15-false-HAL-true,10-MX_I2C1_Init-I2C1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=16125000
 RCC.AHB12Freq_Value=150000000
 RCC.AHB4Freq_Value=150000000
