--- a/Quadcopter_UniTS/Quadcopter_UniTS.ioc
+++ b/Quadcopter_UniTS/Quadcopter_UniTS.ioc
@@ -6,22 +6,27 @@ File.Version=6
 I2C1.I2C_Speed_Mode=I2C_Fast
 I2C1.IPParameters=Timing,I2C_Speed_Mode
 I2C1.Timing=0x00702787
+IWDG1.IPParameters=Reload,Prescaler
+IWDG1.Prescaler=IWDG_PRESCALER_32
+IWDG1.Reload=999
 KeepUserPlacement=false
 Mcu.CPN=STM32H7A3ZIT6Q
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=I2C1
-Mcu.IP10=USART3
-Mcu.IP11=USB_OTG_HS
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=TIM1
-Mcu.IP6=TIM3
-Mcu.IP7=TIM4
-Mcu.IP8=TIM5
-Mcu.IP9=TIM15
-Mcu.IPNb=12
+Mcu.IP10=TIM5
+Mcu.IP11=TIM15
+Mcu.IP12=USART3
+Mcu.IP13=USB_OTG_HS
+Mcu.IP2=IWDG1
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=TIM1
+Mcu.IP7=TIM2
+Mcu.IP8=TIM3
+Mcu.IP9=TIM4
+Mcu.IPNb=14
 Mcu.Name=STM32H7A3Z(G-I)TxQ
 Mcu.Package=LQFP144
 Mcu.Pin0=PE5
@@ -43,20 +48,22 @@ Mcu.Pin22=PB6
 Mcu.Pin23=PB7
 Mcu.Pin24=PB8
 Mcu.Pin25=PE1
-Mcu.Pin26=VP_SYS_VS_Systick
-Mcu.Pin27=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin28=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin29=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin26=VP_IWDG1_VS_IWDG
+Mcu.Pin27=VP_SYS_VS_Systick
+Mcu.Pin28=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin29=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin3=PC15-OSC32_OUT
-Mcu.Pin30=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin31=VP_TIM15_VS_ClockSourceINT
+Mcu.Pin30=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin31=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin32=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin33=VP_TIM15_VS_ClockSourceINT
 Mcu.Pin4=PF10
 Mcu.Pin5=PH0-OSC_IN
 Mcu.Pin6=PH1-OSC_OUT
 Mcu.Pin7=PA0
 Mcu.Pin8=PB0
 Mcu.Pin9=PE9
-Mcu.PinsNb=32
+Mcu.PinsNb=34
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H7A3ZITxQ
@@ -72,10 +79,11 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
-NVIC.TIM15_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM15_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
+NVIC.TIM2_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:true
+NVIC.TIM3_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
+NVIC.TIM4_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
+NVIC.TIM5_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0.Locked=true
 PA0.Signal=S_TIM5_CH1
@@ -201,7 +209,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_USB_OTG_HS_USB_Init-USB_OTG_HS-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_TIM5_Init-TIM5-false-HAL-true,9-MX_TIM15_Init-TIM15-false-HAL-true,10-MX_I2C4_Init-I2C4-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_USB_OTG_HS_USB_Init-USB_OTG_HS-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_TIM5_Init-TIM5-false-HAL-true,9-MX_TIM15_Init-TIM15-false-HAL-true,10-MX_I2C1_Init-I2C1-false-HAL-true,11-MX_TIM2_Init-TIM2-false-HAL-true,12-MX_IWDG1_Init-IWDG1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=16125000
 RCC.AHB12Freq_Value=150000000
 RCC.AHB4Freq_Value=150000000
@@ -313,6 +321,9 @@ TIM1.Period=1999
 TIM1.Prescaler=1499
 TIM15.IPParameters=Prescaler
 TIM15.Prescaler=639
+TIM2.IPParameters=Period,Prescaler
+TIM2.Period=1999
+TIM2.Prescaler=1499
 TIM3.IPParameters=Prescaler
 TIM3.Prescaler=639
 TIM4.IPParameters=Prescaler
@@ -322,12 +333,16 @@ TIM5.Period=65535
 TIM5.Prescaler=639
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
+VP_IWDG1_VS_IWDG.Mode=IWDG_Activate
+VP_IWDG1_VS_IWDG.Signal=IWDG1_VS_IWDG
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM15_VS_ClockSourceINT.Mode=Internal
 VP_TIM15_VS_ClockSourceINT.Signal=TIM15_VS_ClockSourceINT
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
