--- a/Quadcopter_UniTS/Quadcopter_UniTS.ioc
+++ b/Quadcopter_UniTS/Quadcopter_UniTS.ioc
@@ -1,4 +1,5 @@
 #MicroXplorer Configuration settings - do not modify
+BSP_IP_NAME=NUCLEO-H7A3ZI-Q
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -18,6 +19,7 @@ Mcu.IP10=TIM5
 Mcu.IP11=TIM15
 Mcu.IP12=USART3
 Mcu.IP13=USB_OTG_HS
+Mcu.IP14=NUCLEO-H7A3ZI-Q
 Mcu.IP2=IWDG1
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
@@ -26,7 +28,7 @@ Mcu.IP6=TIM1
 Mcu.IP7=TIM2
 Mcu.IP8=TIM3
 Mcu.IP9=TIM4
-Mcu.IPNb=14
+Mcu.IPNb=15
 Mcu.Name=STM32H7A3Z(G-I)TxQ
 Mcu.Package=LQFP144
 Mcu.Pin0=PE5
@@ -67,8 +69,8 @@ Mcu.PinsNb=34
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H7A3ZITxQ
-MxCube.Version=6.11.1
-MxDb.Version=DB.6.0.111
+MxCube.Version=6.14.0
+MxDb.Version=DB.6.0.140
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -181,6 +183,7 @@ PH1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
+ProjectManager.CompilerLinker=GCC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
@@ -188,7 +191,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32H7A3ZITxQ
-ProjectManager.FirmwarePackage=STM32Cube FW_H7 V1.11.2
+ProjectManager.FirmwarePackage=STM32Cube FW_H7 V1.12.1
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
@@ -322,7 +325,7 @@ TIM1.Prescaler=1499
 TIM15.IPParameters=Prescaler
 TIM15.Prescaler=639
 TIM2.IPParameters=Period,Prescaler
-TIM2.Period=1999
+TIM2.Period=499
 TIM2.Prescaler=1499
 TIM3.IPParameters=Prescaler
 TIM3.Prescaler=639
